--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -1,6 +1,6 @@
 <div class="right-content-wrapper" id="rent-package-rpanel">
     <div class="right-panel-header">
-        <a href="javascript:void(0)" class="closebtn">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" ng-click="rCtrl.reset()">&times;</a>
         <h3>录入</h3>
     </div>
 
@@ -11,30 +11,25 @@
                     <td>
                         <div class="input-wrapper">
                             <label>铺位号</label>
-                            <input type="text" value=""/>
+                            <input type="text" value="" ng-model="rCtrl.shopInfo.shopIndex"/>
                         </div>
                     </td>
                     <td>
                         <div class="input-wrapper">
                             <label>楼层</label>
-                            <input type="text" value=""/>
+                            <input type="text" value="" ng-model="rCtrl.shopInfo.floor"/>
                         </div>
                     </td>
                     <td>
                         <div class="input-wrapper input-wrapper-select">
                             <label>位置</label>
-                            <input type="text" value="" hidden/>
+                            <input type="text" value="" hidden ng-model="rCtrl.shopInfo.position"/>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
-                                    <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
+                                    <em>{{rCtrl.shopInfo.position | default:"请选择"}}</em><span class="ys-icon ys-icon-dropdown"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">主入口</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">主立面外墙</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">次入口</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">主通道</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">侧面面街</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">后街</a></li>
+                                    <li ng-class="{'active':rCtrl.isActive(menu,rCtrl.shopInfo.position)}" role="presentation" ng-repeat="menu in rCtrl.form_menu.positions"><a role="menuitem" ng-click="rCtrl.setModel('position',menu)">{{menu}}</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -45,11 +40,10 @@
                             <input type="text" value="" hidden/>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
-                                    <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
+                                    <em>{{rCtrl.shopInfo.type | default:"请选择"}}</em><span class="ys-icon ys-icon-dropdown"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">MALL</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1">商业街</a></li>
+                                    <li ng-class="{'active':rCtrl.isActive(menu,rCtrl.shopInfo.type)}" role="presentation" ng-repeat="menu in rCtrl.form_menu.type"><a role="menuitem" ng-click="rCtrl.setModel('type',menu)">{{menu}}</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -62,14 +56,14 @@
                     <td>
                         <div class="input-wrapper">
                             <label>建筑面积</label>
-                            <input type="text" value=""/>
+                            <input type="text" value="" ng-model="rCtrl.shopInfo.floorArea"/>
                         </div>
                     </td>
 
                     <td>
                         <div class="input-wrapper">
                             <label>套内面积</label>
-                            <input type="text" value=""/>
+                            <input type="text" value="" ng-model="rCtrl.shopInfo.indoorArea"/>
                         </div>
                     </td>
 
@@ -79,12 +73,11 @@
                             <input type="text" value="" hidden/>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
-                                    <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
+                                    <em>{{rCtrl.shopInfo.property | default:"请选择"}}</em><span class="ys-icon ys-icon-dropdown"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >自持</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >销售</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >销售返租</a></li>
+                                    <li ng-class="{'active':rCtrl.isActive(menu,rCtrl.shopInfo.property)}" role="presentation" ng-repeat="menu in rCtrl.form_menu.property"><a role="menuitem" ng-click="rCtrl.setModel('property',menu)">{{menu}}</a></li>
+
 
                                 </ul>
                             </div>
@@ -97,17 +90,11 @@
                             <input type="text" value="" hidden/>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
-                                    <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
+                                    <em>{{rCtrl.shopInfo.form | default:"请选择"}}</em><span class="ys-icon ys-icon-dropdown"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >超市</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >影院</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >时装</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >餐饮</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >娱乐</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >配套</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >儿童</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" >其他</a></li>
+                                    <li ng-class="{'active':rCtrl.isActive(menu,rCtrl.filters.form)}" role="presentation" ng-repeat="menu in rCtrl.form_menu.form"><a role="menuitem" ng-click="rCtrl.setModel('form',menu)">{{menu}}</a></li>
+
                                 </ul>
                             </div>
                         </div>
@@ -131,11 +118,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_1"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_2"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_3"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_4"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentfee.year_5"/></div> </td>
                 </tr>
             </tbody>
         </table>
@@ -154,22 +141,23 @@
             </thead>
             <tbody>
             <tr>
-                <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value=""/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_1"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_2"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_3"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_4"/></div> </td>
+                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.mfee.year_5"/></div> </td>
             </tr>
             </tbody>
         </table>
         <div class="block clearfix">
             <div class="btn-wrapper pull-right">
-                <a href="javascript:void(0)" class="btn btn-default amp-btn" id="btn-save">保存</a>
-                <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="btn-continue">继续录入</a>
+                <a class="btn btn-default amp-btn" id="btn-save" ng-click="rCtrl.save()">保存</a>
+                <a class="btn btn-default amp-btn amp-btn-reverse" id="btn-continue" ng-click="rCtrl.next()" ng-show="rCtrl.index==''">继续录入</a>
             </div>
         </div>
     </div>
 </div>
+<!--
 <script src="../static/js/views/datatools/rpgindex_rpanel.js"></script>
 <script>
     $(document).ready(function(){
@@ -179,4 +167,4 @@
         rpg_rpanel.init();
     });
 
-</script>
+</script>-->
